--- a/devices/sensors.yaml
+++ b/devices/sensors.yaml
@@ -243,6 +243,7 @@
         {% endif %}
     moment_dia:
       friendly_name: Moment del dia
+      entity_id: sensor.time
       value_template: |
         {%- if as_timestamp(now()) | timestamp_custom('%H') | int < 7 -%}Matinada
         {%- elif as_timestamp(now()) | timestamp_custom('%H') | int < 12 -%}Matí
@@ -250,6 +251,20 @@
         {%- elif as_timestamp(now()) | timestamp_custom('%H') | int < 20 -%}Tarda
         {%- elif as_timestamp(now()) | timestamp_custom('%H') | int < 22 -%}Vespre
         {%- else -%}Nit{%- endif -%}
+    holaluz_franja_horaria:
+      friendly_name: HolaLuz franja horaria
+      entity_id: sensor.time
+      value_template: |
+        {%- if as_timestamp(utcnow()) | timestamp_custom('%H') | int < 11 -%}Vall
+        {%- elif as_timestamp(utcnow()) | timestamp_custom('%H') | int < 21 -%}Punta
+        {%- else -%}Vall{%- endif -%}
+    holaluz_preu:
+      friendly_name: HolaLuz franja horaria
+      entity_id: sensor.time
+      value_template: |
+        {%- if as_timestamp(utcnow()) | timestamp_custom('%H') | int < 11 -%}Vall
+        {%- elif as_timestamp(utcnow()) | timestamp_custom('%H') | int < 21 -%}Punta
+        {%- else -%}Vall{%- endif -%}
 
 ###############
 # SQL Queries #
