--- a/devices/alexa.yaml
+++ b/devices/alexa.yaml
@@ -37,7 +37,7 @@ smart_home:
       - script.vacuum_start
       - script.menjador_dynamic_scene
       - media_player.tele
-      - media_player.xbox_one_menjador
+      - media_player.xboxone
   entity_config:
     climate.menjador:
       name: Comedor
@@ -75,5 +75,5 @@ smart_home:
     switch.llum_cuina:
       name: Cocina
       display_categories: LIGHT
-    media_player.xbox_one_menjador:
+    media_player.xboxone:
       name: Consola
