--- a/devices/media_players.yaml
+++ b/devices/media_players.yaml
@@ -9,7 +9,7 @@
   username: kodi
   password: kodi
 
-- platform: xboxone
-  device: !secret xbox_deviceid
-  ip_address: !secret xbox_ip
-  name: Xbox One Menjador
+  #- platform: xboxone
+  #  device: !secret xbox_deviceid
+  #  ip_address: !secret xbox_ip
+  #  name: Xbox One Menjador
