--- a/scripts/tv/xbox.yaml
+++ b/scripts/tv/xbox.yaml
@@ -4,7 +4,7 @@
   - service: script.menjador_dynamic_scene
   - service: media_player.turn_on
     data: 
-      entity_id: media_player.xbox_one_menjador
+      entity_id: media_player.xboxone
   # - service: scene.turn_on
   #   data:
   #     entity_id: scene.relax
