--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -2,7 +2,7 @@ title: Casa
 resources: !include lovelace/resources.yaml
 preload:
   - conditional
-custom_header: !include lovelace/custom_header.yaml
+# custom_header: !include lovelace/custom_header.yaml
 # animated_background: !include lovelace/animated_backgrounds.yaml
 decluttering_templates: !include_dir_merge_named lovelace/decluttering_templates/
 views: !include lovelace/views.yaml
