--- a/lovelace/decluttering_templates/nest_buttons/nest_button.yaml
+++ b/lovelace/decluttering_templates/nest_buttons/nest_button.yaml
@@ -18,7 +18,7 @@ nest_button:
     type: "custom:button-card"
     style: |
       ha-card {
-        font-family: Roboto, 'Open Sans', sans-serif;
+        font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', sans-serif;
         /* padding-top: 15px !important; */
         background-color: rgba(0, 0, 0, 0);
         -webkit-box-shadow: none;
@@ -39,6 +39,7 @@ nest_button:
       }
       #state {
         padding-top: 5px;
+        font-size: [[title-font-size]];
       }
       #label {
         font-size: 70%;
