--- a/lovelace/decluttering_templates/title_h2.yaml
+++ b/lovelace/decluttering_templates/title_h2.yaml
@@ -1,22 +1,43 @@
 title_h2:
+
+  # Style
+  card_header:
+    style: &card_header
+      .: |
+        ha-card {
+          background: none;
+          box-shadow: none;
+        }
+          
+      ha-markdown:
+        $: |
+          p {
+            font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', sans-serif;
+            font-size: 15px !important;
+            font-weight: 500 !important;
+            padding: 0px 0px 0px 8px !important;
+            border-left: 3px solid rgba(81, 134, 236);
+          }
+
   card:
     type: markdown
     content: |
       [[title]]
-    style: |
-      ha-card {
-        font-family: Roboto, 'Open Sans', sans-serif;
-        font-size: 100%;
-        -webkit-box-shadow: none;
-        -moz-box-shadow: none;
-        box-shadow: none;
-        text-align: left;
-        background: rgba(0,0,0,0);
-        color: var(--card-header-text-color);;
-        font-weight: 300 !important;
-        margin: 0px;
-        font-size: 1.5em;
-      }
-      .no-header {
-        padding-bottom: 7px;
-      }
+    style: *card_header
+    # style: |
+    #   ha-card {
+    #     font-family: Roboto, 'Open Sans', sans-serif;
+    #     font-size: 100%;
+    #     -webkit-box-shadow: none;
+    #     -moz-box-shadow: none;
+    #     box-shadow: none;
+    #     text-align: left;
+    #     background: rgba(0,0,0,0);
+    #     color: var(--card-header-text-color);;
+    #     font-weight: 300 !important;
+    #     margin: 0px;
+    #     font-size: 1.5em;
+    #   }
+    #   .no-header {
+    #     padding-bottom: 7px;
+    #   }
