Fix small issues

--- a/automations/vacuum/notify_vacuum.yaml
+++ b/automations/vacuum/notify_vacuum.yaml
@@ -4,44 +4,44 @@ trigger:
   - platform: template
     value_template: |
       {{ 
-        ((now().strftime("%s") | int + (30*60) | timestamp_custom("%H:%M", true)) == (state_attr('input_datetime.vacuum_schedule_time_mon', 'timestamp') | int | timestamp_custom('%H:%M', False)))
-        and (now().weekday() == 0 and states('input_boolean.vacuum_enable_mon') == "on")
+        ((now().strftime("%H:%M") == (state_attr('input_datetime.vacuum_schedule_time_mon', 'timestamp') | int | timestamp_custom('%H:%M', False)))
+        and (now().weekday() == 0 and states('input_boolean.vacuum_enable_mon') == "on"))
       }}
   - platform: template
     value_template: |
       {{ 
-        ((now().strftime("%s") | int + (30*60) | timestamp_custom("%H:%M", true)) == (state_attr('input_datetime.vacuum_schedule_time_tue', 'timestamp') | int | timestamp_custom('%H:%M', False)))
-        and (now().weekday() == 1 and states('input_boolean.vacuum_enable_tue') == "on")
+        ((now().strftime("%H:%M") == (state_attr('input_datetime.vacuum_schedule_time_tue', 'timestamp') | int | timestamp_custom('%H:%M', False)))
+        and (now().weekday() == 1 and states('input_boolean.vacuum_enable_tue') == "on"))
       }}
   - platform: template
     value_template: |
       {{ 
-        ((now().strftime("%s") | int + (30*60) | timestamp_custom("%H:%M", true)) == (state_attr('input_datetime.vacuum_schedule_time_wed', 'timestamp') | int | timestamp_custom('%H:%M', False)))
-        and (now().weekday() == 2 and states('input_boolean.vacuum_enable_wed') == "on")
+        ((now().strftime("%H:%M") == (state_attr('input_datetime.vacuum_schedule_time_wed', 'timestamp') | int | timestamp_custom('%H:%M', False)))
+        and (now().weekday() == 2 and states('input_boolean.vacuum_enable_wed') == "on"))
       }}
   - platform: template
     value_template: |
       {{ 
-        ((now().strftime("%s") | int + (30*60) | timestamp_custom("%H:%M", true)) == (state_attr('input_datetime.vacuum_schedule_time_thu', 'timestamp') | int | timestamp_custom('%H:%M', False)))
-        and (now().weekday() == 3 and states('input_boolean.vacuum_enable_thu') == "on")
+        ((now().strftime("%H:%M") == (state_attr('input_datetime.vacuum_schedule_time_thu', 'timestamp') | int | timestamp_custom('%H:%M', False)))
+        and (now().weekday() == 3 and states('input_boolean.vacuum_enable_thu') == "on"))
       }}
   - platform: template
     value_template: |
       {{ 
-        ((now().strftime("%s") | int + (30*60) | timestamp_custom("%H:%M", true)) == (state_attr('input_datetime.vacuum_schedule_time_fri', 'timestamp') | int | timestamp_custom('%H:%M', False)))
-        and (now().weekday() == 4 and states('input_boolean.vacuum_enable_fri') == "on")
+        ((now().strftime("%H:%M") == (state_attr('input_datetime.vacuum_schedule_time_fri', 'timestamp') | int | timestamp_custom('%H:%M', False)))
+        and (now().weekday() == 4 and states('input_boolean.vacuum_enable_fri') == "on"))
       }}
   - platform: template
     value_template: |
       {{ 
-        ((now().strftime("%s") | int + (30*60) | timestamp_custom("%H:%M", true)) == (state_attr('input_datetime.vacuum_schedule_time_sat', 'timestamp') | int | timestamp_custom('%H:%M', False)))
-        and (now().weekday() == 5 and states('input_boolean.vacuum_enable_sat') == "on")
+        ((now().strftime("%H:%M") == (state_attr('input_datetime.vacuum_schedule_time_sat', 'timestamp') | int | timestamp_custom('%H:%M', False)))
+        and (now().weekday() == 5 and states('input_boolean.vacuum_enable_sat') == "on"))
       }}
   - platform: template
     value_template: |
       {{ 
-        ((now().strftime("%s") | int + (30*60) | timestamp_custom("%H:%M", true)) == (state_attr('input_datetime.vacuum_schedule_time_sun', 'timestamp') | int | timestamp_custom('%H:%M', False)))
-        and (now().weekday() == 6 and states('input_boolean.vacuum_enable_sun') == "on")
+        ((now().strftime("%H:%M") == (state_attr('input_datetime.vacuum_schedule_time_sun', 'timestamp') | int | timestamp_custom('%H:%M', False)))
+        and (now().weekday() == 6 and states('input_boolean.vacuum_enable_sun') == "on"))
       }}
 condition:
 action:
@@ -51,3 +51,4 @@ action:
     data: 
       title: "Aspirador programat"
       message: "L'aspirador es passarà en 15 minuts. Si us plau recolliu les coses del terra."
+
