--- a/lovelace/views/00_home.yaml
+++ b/lovelace/views/00_home.yaml
@@ -70,12 +70,14 @@ cards:
 
           - !include 00_home/entrada.yaml
           - !include 00_home/menjador.yaml
+          - !include 00_home/exterior.yaml
 
           - break
 
           - !include 00_home/cuina.yaml
           - !include 00_home/dormitori.yaml
-          - !include 00_home/exterior.yaml
+          - !include 00_home/despatx.yaml
+          
           
 
           ##################
