--- a/automations/heater/dormitori/turn_on.yaml
+++ b/automations/heater/dormitori/turn_on.yaml
@@ -2,52 +2,26 @@ alias: 'Climate dormitori - Turn on'
 initial_state: true
 trigger:
   - platform: time
-    at: "22:00:00"
-  - platform: homeassistant
-    event: start
-  - platform: state
-    entity_id: media_player.tele
-    to: 'playing'
-  - platform: state
-    entity_id: switch.llum_cuina
-    to: 'on'
-  - platform: state
-    entity_id: light.entrada
-    to: 'on'
-  - platform: state
-    entity_id: light.mesa
-    to: 'on'
-  - platform: state
-    entity_id: light.sofa
-    to: 'on'
+    at: "21:30:00"
 condition:
   condition: and
   conditions:
     - condition: time
-      after: "22:00:00"
+      after: "21:00:00"
     - condition: time
       before: "23:00:00"
-    - condition: numeric_state
-      entity_id: sensor.exterior_temperature_mqtt
-      below: 15
-    - condition: or
-      conditions:
-        - condition: state
-          entity_id: media_player.tele
-          state: 'playing'
-        - condition: state
-          entity_id: switch.llum_cuina
-          state: 'on'
-        - condition: state
-          entity_id: light.entrada
-          state: 'on'
-        - condition: state
-          entity_id: light.mesa
-          state: 'on'
-        - condition: state
-          entity_id: light.sofa
-          state: 'on'
+    # - condition: numeric_state
+    #   entity_id: sensor.exterior_temperature_mqtt
+    #   below: 15
+    - condition: template
+      value_template: "{{ is_state('person.imma', 'home') or is_state('person.aleix', 'home')  }}"
 action:
   - service: climate.turn_on
     data:
       entity_id: climate.dormitori
+
+  # Send notification
+  - service: notify.notify
+    data: 
+      title: "Casa"
+      message: "Engeguem calefacció dormitori"
