--- a/automations/heater/menjador/turn_on.yaml
+++ b/automations/heater/menjador/turn_on.yaml
@@ -8,21 +8,6 @@ trigger:
     at: "19:00:00"
   - platform: homeassistant
     event: start
-  - platform: state
-    entity_id: media_player.tele
-    to: 'playing'
-  - platform: state
-    entity_id: switch.llum_cuina
-    to: 'on'
-  - platform: state
-    entity_id: light.entrada
-    to: 'on'
-  - platform: state
-    entity_id: light.mesa
-    to: 'on'
-  - platform: state
-    entity_id: light.sofa
-    to: 'on'
 condition:
   condition: and
   conditions:
@@ -31,26 +16,11 @@ condition:
       after_offset: "00:30:00"
     - condition: time
       before: "23:00:00"
-    - condition: numeric_state
-      entity_id: sensor.exterior_temperature_mqtt
-      below: 15
-    - condition: or
-      conditions:
-        - condition: state
-          entity_id: media_player.tele
-          state: 'playing'
-        - condition: state
-          entity_id: switch.llum_cuina
-          state: 'on'
-        - condition: state
-          entity_id: light.entrada
-          state: 'on'
-        - condition: state
-          entity_id: light.mesa
-          state: 'on'
-        - condition: state
-          entity_id: light.sofa
-          state: 'on'
+    # - condition: numeric_state
+    #   entity_id: sensor.exterior_temperature_mqtt
+    #   below: 15
+    - condition: template
+      value_template: "{{ is_state('person.imma', 'home') or is_state('person.aleix', 'home')  }}"
 action:
   - service: climate.turn_on
     data:
