--- a/devices/sensors.yaml
+++ b/devices/sensors.yaml
@@ -362,6 +362,14 @@
   state_topic: "zigbee2mqtt/bridge/config"
   value_template: "{{ value_json.version }}"
   icon: mdi:zigbee
+- platform: mqtt
+  name: Zigbee2mqtt Networkmap
+  # if you change base_topic of Zigbee2mqtt, change state_topic accordingly
+  state_topic: zigbee2mqtt/bridge/networkmap/raw
+  value_template: >-
+    {{ now().strftime('%Y-%m-%d %H:%M:%S') }}
+  # again, if you change base_topic of Zigbee2mqtt, change json_attributes_topic accordingly
+  json_attributes_topic: zigbee2mqtt/bridge/networkmap/raw
 # Sensor for Showing the Coordinator Version
 - platform: mqtt
   name: Coordinator Version
